unpackaged/main/default/objects/DPN__c/DPN__c.object-meta.xml
<CustomObject>
    <description>Demanda Programada Nacional</description>
    <label>DPN</label>
    <nameField>
        <displayFormat>DPN-{00000000}</displayFormat>
        <label>DPN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DPNs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>