unpackaged/main/default/objects/DPN__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>UMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DPNs (UMU)</relationshipLabel>
    <relationshipName>DPNs1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>