unpackaged/main/default/objects/DPN__c/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <label>Año</label>
    <type>TextArea</type>
</CustomField>