unpackaged/main/default/objects/DPN__c/fields/Clave__c.field-meta.xml
<CustomField>
    <fullName>Clave__c</fullName>
    <externalId>true</externalId>
    <label>Clave</label>
    <length>12</length>
    <type>Text</type>
</CustomField>