unpackaged/main/default/objects/DPN__c/fields/Clave_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Clave_Presupuestal__c</fullName>
    <label>Clave Presupuestal</label>
    <length>8</length>
    <type>Text</type>
</CustomField>