unpackaged/main/default/objects/DPN__c/fields/Clave_Presupuestal_umu__c.field-meta.xml
<CustomField>
    <fullName>Clave_Presupuestal_umu__c</fullName>
    <formula>Account__r.Clave_Presupuestal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave Presupuestal</label>
    <type>Text</type>
</CustomField>