unpackaged/main/default/objects/DPN__c/fields/DPN__c.field-meta.xml
<CustomField>
    <fullName>DPN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DPNs</relationshipLabel>
    <relationshipName>DPNs</relationshipName>
    <type>Lookup</type>
</CustomField>