unpackaged/main/default/objects/DPN__c/fields/DXGUIA__c.field-meta.xml
<CustomField>
    <fullName>DXGUIA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DXGUIA</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>