unpackaged/main/default/objects/DPN__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Historico</fullName>
            </value>
            <value>
                <fullName>No Ordinario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>