unpackaged/main/default/objects/DPN__c/fields/Tipo_de_Umu__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Umu__c</fullName>
    <formula>TEXT(Account__r.Tipo_UMU__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Umu</label>
    <type>Text</type>
</CustomField>