unpackaged/main/default/objects/DPN__c/fields/UR__c.field-meta.xml
<CustomField>
    <fullName>UR__c</fullName>
    <label>UR</label>
    <length>3</length>
    <type>Text</type>
</CustomField>