unpackaged/main/default/objects/DPN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Estatus__c</columns>
    <columns>Fecha_de_Inicio__c</columns>
    <columns>Fecha_de_Fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>