unpackaged/main/default/objects/DPN__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Fecha_de_Inicio__c</columns>
    <columns>Fecha_de_Fin__c</columns>
    <columns>Estatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>CMF AGUASCALIENTES</value>
    </filters>
    <label>All</label>
</ListView>